// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton should renders properly 1`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-button-test-danger"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    danger
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-button-test-danger"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Action
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Another action
      </a>
    </li>
    <li
      className="active"
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Active Item
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Separated link
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownButton should renders properly 2`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-button-test-default"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    default
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-button-test-default"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Action
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Another action
      </a>
    </li>
    <li
      className="active"
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Active Item
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Separated link
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownButton should renders properly 3`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-button-test-primary"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    primary
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-button-test-primary"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Action
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Another action
      </a>
    </li>
    <li
      className="active"
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Active Item
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Separated link
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownButton should renders properly 4`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="dropdown-button-test-link"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    type="button"
  >
    link
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="dropdown-button-test-link"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Action
      </a>
    </li>
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Another action
      </a>
    </li>
    <li
      className="active"
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Active Item
      </a>
    </li>
    <li
      className="divider"
      onKeyDown={[Function]}
      role="separator"
      style={undefined}
    />
    <li
      className=""
      role="presentation"
      style={undefined}
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Separated link
      </a>
    </li>
  </ul>
</div>
`;
